--- a/stories/DataEntry/Textarea.stories.mdx
+++ b/stories/DataEntry/Textarea.stories.mdx
@@ -19,7 +19,10 @@ import Textarea, { textareaTypes } from "@/src/Components/DataEntry/Textarea";
         },
         maxHeight: {
             description: "Textarea의 최대 높이",
-            defaultValue: "auto",
+            control: { type: "text" },
+        },
+        minHeight: {
+            description: "Textarea의 최소 높이",
             control: { type: "text" },
         },
         readOnly: {
@@ -45,6 +48,7 @@ export const Default = (args, { argTypes }) => ({
             <Textarea :type="type"
                       :placeholder="placeholder"
                       :maxHeight="maxHeight"
+                      :minHeight="minHeight"
                       :read-only="readOnly"
                       v-model="value"/>
         </div>`,
