[add] DatePicker 스토리북 예시 clearable 추가

--- a/stories/DataEntry/DatePicker.stories.mdx
+++ b/stories/DataEntry/DatePicker.stories.mdx
@@ -108,6 +108,7 @@ export const Default = (args, { argTypes }) => ({
                             format="YYYY-MM-DD 부터"
                             :disabled-date="notBeforeToday"
                             :editable="false"
+                            clearable
                         />
                     </div>
                     <div>
