--- a/stories/DataEntry/FileInput.stories.mdx
+++ b/stories/DataEntry/FileInput.stories.mdx
@@ -49,7 +49,7 @@ export const Default = (args, { argTypes }) => ({
             this.files[payload.index].isLoading = false;
         }, 3000);
     },
-    handleClickItemContent(payload) {
+    handleClickFileItemContent(payload) {
         alert('clickItemContent')
     }
   },
@@ -59,7 +59,7 @@ export const Default = (args, { argTypes }) => ({
                  @uploadFiles="handleUploadFiles"
                  />
                  <Divider type="dash" vertical style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
-                 <FileList :files="files" @clickFileDownloadIcon="handleClickFileDownloadIcon" @clickItemContent="handleClickItemContent"/>
+                 <FileList :files="files" @clickFileDownloadIcon="handleClickFileDownloadIcon" @clickFileItemContent="handleClickFileItemContent"/>
                  </div>
               </div>`,
    components: { FileInput, FileList, Divider },
@@ -101,8 +101,8 @@ export const Default = (args, { argTypes }) => ({
                     this.files[payload.index].isLoading = false;
                 }, 3000);
             },
-            handleClickItemContent(payload) {
-                alert('clickItemContent')
+            handleClickFileItemContent(payload) {
+                alert('clickFileItemContent')
             },
             handleCreateUploadFiles(files) {
                const filesWithLoading = Object.values(files).map(file => ({file: file, isLoading: false}));
@@ -135,7 +135,7 @@ export const Default = (args, { argTypes }) => ({
                               @uploadFiles="handleCreateUploadFiles"
                             />
                             <Divider type="dash" vertical style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
-                            <FileList :files="createFiles" isEdit @clickTrashIcon="handleCreateClickTrashIcon" @clickItemContent="handleClickItemContent"/>
+                            <FileList :files="createFiles" isEdit @clickFileTrashIcon="handleCreateClickTrashIcon" @clickFileItemContent="handleClickFileItemContent"/>
                         </div>
                         <div style="width: 100%; margin-bottom: 30px;">
                             <Typography type="body2">수정 시</Typography>
@@ -143,13 +143,13 @@ export const Default = (args, { argTypes }) => ({
                               @uploadFiles="handleEditUploadFiles"
                             />
                             <Divider type="dash" vertical style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
-                            <FileList :files="editFiles" isEdit @clickTrashIcon="handleEditClickTrashIcon" @clickItemContent="handleClickItemContent"/>
+                            <FileList :files="editFiles" isEdit @clickFileTrashIcon="handleEditClickTrashIcon" @clickFileItemContent="handleClickFileItemContent"/>
                         </div>
                          <div style="width: 100%; margin-bottom: 30px;">
                             <Typography type="body2">완료 시</Typography>
                             <FileSummary :length="mockFiles.length" @clickAllFileDownloadButton="handleClickAllFileDownloadButton"/>
                             <Divider type="dash" vertical style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
-                            <FileList :files="mockFiles" @clickFileDownloadIcon="handleClickMockFileDownloadIcon" @clickItemContent="handleClickItemContent"/>
+                            <FileList :files="mockFiles" @clickFileDownloadIcon="handleClickMockFileDownloadIcon" @clickFileItemContent="handleClickFileItemContent"/>
                         </div>
                       </div>`,
              components: { FileInput, FileList, FileSummary, Divider, Typography },
