[change] props camel -> cebab case

--- a/stories/DataEntry/Textarea.stories.mdx
+++ b/stories/DataEntry/Textarea.stories.mdx
@@ -47,8 +47,8 @@ export const Default = (args, { argTypes }) => ({
         `<div style="background:aliceblue; padding:20px">
             <Textarea :type="type"
                       :placeholder="placeholder"
-                      :maxHeight="maxHeight"
-                      :minHeight="minHeight"
+                      :max-height="maxHeight"
+                      :min-height="minHeight"
                       :read-only="readOnly"
                       v-model="value"/>
         </div>`,
