--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -160,6 +160,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper name=IconEssayLargeLine></IconWrapper>
                             <IconWrapper name=IconResumeLargeLine></IconWrapper>
                             <IconWrapper name=IconQuestionLargeLine></IconWrapper>
+                            <IconWrapper name=IconVideoLargeFill></IconWrapper>
                         </div>
                     </div>
                     <!--x-large-->
