--- a/stories/Message/Modal/FullscreenModal.stories.mdx
+++ b/stories/Message/Modal/FullscreenModal.stories.mdx
@@ -2,6 +2,7 @@ import { ArgsTable, Meta, Story } from "@storybook/addon-docs/blocks";
 import FullscreenModal, {fullScreenAlign} from "@/src/Components/Message/Modal/FullscreenModal";
 import Button from "@/src/Components/Button/Button";
 import Icon from '@/src/Elements/Core/Icon/Icon';
+import SearchInput from "@/src/Components/DataEntry/SearchInput";
 
 <Meta
     title="Message/Modal/FullscreenModal"
@@ -45,9 +46,17 @@ export const Default = (args, { argTypes }) => ({
                 :show-close-button="showCloseButton"
                 :align="align"
             >
-                <div style="padding: 18px 42px 18px 18px">
-                    {{contents}}
-                </div>
+                <template v-slot:header>
+                    <p>Title</p>
+                    <p>Sub</p>
+                </template>
+                <template v-slot:content>
+                    <div style="padding: 18px 42px 18px 18px;
+                    height: 800px;
+                    background: red;">
+                        {{ contents }}
+                    </div>
+                </template>
             </FullscreenModal>
         </div>`
 });
@@ -61,3 +70,118 @@ export const Default = (args, { argTypes }) => ({
 </Story>
 
 <ArgsTable story="Default" />
+
+## Stories
+### Slot-Title
+<Canvas>
+    <Story name="Slot-Title" height="100px">
+        {{
+            data: () => ({
+                show: false,
+            }),
+            template: `
+                <div>
+                    <Button @click="show = true">Open</Button>
+                    <FullscreenModal
+                        :show.sync="show"
+                        :show-close-button="false"
+                        align="left"
+                    >
+                        <template v-slot:title>
+                          Title이 있는 경우
+                        </template>
+                        <template v-slot:content>
+                            <div style="padding:16px">
+                                - 이용권 특성상 구매 후 중도 해지 및 이에 따른 환불이 불가능합니다.<br />
+                                - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
+                                - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
+                                - 결제에 따른 개인정보는 '개인정보 처리방침'에 근거하여 관리됩니다.
+                            </div>
+                        </template>
+                    </BasicModal>
+                </div>
+            `,
+            components: {
+                FullscreenModal, Button
+            }
+        }}
+    </Story>
+</Canvas>
+
+
+### Slot-Right
+<Canvas>
+    <Story name="Slot-Right" height="100px">
+        {{
+            data: () => ({
+                show: false,
+            }),
+            template: `
+                <div>
+                    <Button @click="show = true">Open</Button>
+                    <FullscreenModal
+                        :show.sync="show"
+                        :show-close-button="false"
+                        align="right"
+                    >
+                        <template v-slot:title>
+                          Title
+                        </template>
+                        <template v-slot:right>
+                            <Button size="small" type="outlined">초기화</Button>
+                        </template>
+                        <template v-slot:content>
+                            <div style="padding:16px">
+                                - 이용권 특성상 구매 후 중도 해지 및 이에 따른 환불이 불가능합니다.<br />
+                                - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
+                                - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
+                                - 결제에 따른 개인정보는 '개인정보 처리방침'에 근거하여 관리됩니다.
+                            </div>
+                        </template>
+                    </BasicModal>
+                </div>
+            `,
+            components: {
+                FullscreenModal, Button
+            }
+        }}
+    </Story>
+</Canvas>
+
+### Slot-Content
+<Canvas>
+    <Story name="Slot-Content" height="100px">
+        {{
+            data: () => ({
+                show: false,
+            }),
+            template: `
+                <div>
+                    <Button @click="show = true">Open</Button>
+                    <FullscreenModal
+                        :show.sync="show"
+                        :show-close-button="false"
+                        align="top"
+                    >
+                        <template v-slot:content>
+                            <div class="pa-16">
+                                <div class="mr-8" @click="show = false" style="float:left; margin-top:4px">
+                                    <Icon name="IconArrowLargeLine" :rotate="-90"></Icon>
+                                </div>
+                                <SearchInput
+                                    ref="searchModalInput"
+                                    placeholder="예시로 들어 갈 수 있습니다."
+                                    full
+                                    style="float:left; width:90%; display:block"
+                                ></SearchInput>
+                            </div>
+                        </template>
+                    </FullscreenModal>
+                </div>
+            `,
+            components: {
+                FullscreenModal, Button, SearchInput, Icon
+            }
+        }}
+    </Story>
+</Canvas>
