--- a/stories/Message/Modal/FullscreenModal.stories.mdx
+++ b/stories/Message/Modal/FullscreenModal.stories.mdx
@@ -52,8 +52,7 @@ export const Default = (args, { argTypes }) => ({
                 </template>
                 <template v-slot:content>
                     <div style="padding: 18px 42px 18px 18px;
-                    height: 800px;
-                    background: red;">
+                    height: 800px;">
                         {{ contents }}
                     </div>
                 </template>
@@ -109,9 +108,9 @@ export const Default = (args, { argTypes }) => ({
 </Canvas>
 
 
-### Slot-Right
+### Slot-Action
 <Canvas>
-    <Story name="Slot-Right" height="100px">
+    <Story name="Slot-Action" height="100px">
         {{
             data: () => ({
                 show: false,
@@ -127,7 +126,7 @@ export const Default = (args, { argTypes }) => ({
                         <template v-slot:title>
                           Title
                         </template>
-                        <template v-slot:right>
+                        <template v-slot:action>
                             <Button size="small" type="outlined">초기화</Button>
                         </template>
                         <template v-slot:content>
