Feature/fix textarea issue (#320)
* [fix] value랑 data랑 동기화 안되는 이슈 해결

* [remove] data 예시 제거

--- a/stories/DataEntry/Textarea.stories.mdx
+++ b/stories/DataEntry/Textarea.stories.mdx
@@ -50,7 +50,7 @@ export const Default = (args, { argTypes }) => ({
                       :max-height="maxHeight"
                       :min-height="minHeight"
                       :read-only="readOnly"
-                      v-model="value"/>
+                      :value.sync="value"/>
         </div>`,
 });
 
